src/objects/CPA_CNF_TNF__c.object
<CustomObject>
    <fields>
        <fullName>CNF_Status__c</fullName>
        <label>CNF Status</label>
        <picklist>
            <picklistValues>
                <fullName>Saved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resubmitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CNF_TAT__c</fullName>
        <label>CNF TAT</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PWO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PWO</label>
        <referenceTo>CPA_project_work_order__c</referenceTo>
        <relationshipLabel>CNF/TNFs</relationshipLabel>
        <relationshipName>CNF_TNFs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TNF_Auto_ID__c</fullName>
        <label>TNF Auto ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNF_Status__c</fullName>
        <label>TNF Status</label>
        <picklist>
            <picklistValues>
                <fullName>Saved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resubmitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>chk_CNF_Contract_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CNF_Contract_Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chk_TNF_Contract_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TNF Contract Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dat_CNF_Accepted_Date__c</fullName>
        <label>CNF Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_CNF_Cancelled_Date__c</fullName>
        <label>CNF Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_CNF_Delivered_Date__c</fullName>
        <label>CNF Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_CNF_Resubmitted_Date__c</fullName>
        <label>CNF Resubmitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_CNF_Returned_Date__c</fullName>
        <label>CNF Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_CNF_Sent_for_Signature_Date__c</fullName>
        <label>CNF Sent for Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_CNF_Signed_Date__c</fullName>
        <label>CNF Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_CNF_Submitted_Date__c</fullName>
        <label>CNF Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_TNF_Accepted_Date__c</fullName>
        <label>TNF Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_TNF_Cancelled_Date__c</fullName>
        <label>TNF Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_TNF_Delivered_Date__c</fullName>
        <label>TNF Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_TNF_Resubmitted_Date__c</fullName>
        <label>TNF Resubmitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_TNF_Returned_Date__c</fullName>
        <label>TNF Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_TNF_Sent_for_Signature__c</fullName>
        <label>TNF Sent for Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_TNF_Signed_Date__c</fullName>
        <label>TNF Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_TNF_Submitted_Date__c</fullName>
        <label>TNF Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dt_CNF_Actual_PWO_End_Date__c</fullName>
        <label>CNF Actual PWO End Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dt_CNF_Planned_PWO_End_Date__c</fullName>
        <label>CNF Planned PWO End Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dt_TNF_TD_Date_Notified__c</fullName>
        <label>TNF Date Notified*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dt_TNF_TD_Effective_Date__c</fullName>
        <label>TNF Effective Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>eml_CNF_Unilever_Budget_Approver_Email__c</fullName>
        <label>CNF Unilever Budget Approver Email*</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>eml_CNF_Unilever_Content_Approver_Email__c</fullName>
        <label>CNF Unilever Content Approver Email*</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>eml_TNF_Unilever_Contact_Email__c</fullName>
        <label>TNF Unilever Contact Email*</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ltxta_CNF_Comments__c</fullName>
        <label>CNF Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ltxta_CNF_Reason_for_Cancellation__c</fullName>
        <label>CNF Reason for Cancellation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mpkl_CNF_Currency__c</fullName>
        <label>CNF Currency*</label>
        <picklist>
            <picklistValues>
                <fullName>EURO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>num_CNF_Actual_Day_rate__c</fullName>
        <label>CNF Actual Day Rate*</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_CNF_Actual_Fixed_Price_Contingency__c</fullName>
        <label>CNF Actual Fixed Price Contingency</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_CNF_Actual_PMO_tax__c</fullName>
        <label>CNF Actual PMO Tax*</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_CNF_Actual_expenses__c</fullName>
        <label>CNF Actual Expenses*</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_CNF_Actual_fees_inclusive_of_discoun__c</fullName>
        <label>CNF Actual Fees (Inclusive of Discount)*</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_CNF_Actual_man_days__c</fullName>
        <label>CNF Actual Man-Days*</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_CNF_Actual_total_charges__c</fullName>
        <label>CNF Actual Total Charges*</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_CNF_Planned_Day_rate__c</fullName>
        <label>CNF Planned Day Rate*</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_CNF_Planned_Fixed_Price_Contingency__c</fullName>
        <label>CNF Planned Fixed Price Contingency</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_CNF_Planned_PMO_tax__c</fullName>
        <label>CNF Planned PMO Tax*</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_CNF_Planned_expenses__c</fullName>
        <label>CNF Planned Expenses*</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_CNF_Planned_fees_inclusive_of_discou__c</fullName>
        <label>CNF Planned Fees (Inclusive of Disc) *</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_CNF_Planned_man_days__c</fullName>
        <label>CNF Planned Man-Days*</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_CNF_Planned_total_charges__c</fullName>
        <label>CNF Planned Total Charges*</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_CNF_Variance_number_in_man_days__c</fullName>
        <label>CNF Variance (Number in Man-Days)*</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_TNF_Actual_charges__c</fullName>
        <label>TNF Actual Charges*</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_TNF_Planned_charges__c</fullName>
        <label>TNF Planned Charges*</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_TNF_Planned_effort_in_days__c</fullName>
        <label>TNF Planned Effort in Days*</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_TNF_Variance_in_charges__c</fullName>
        <label>TNF Variance in Charges *</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_TNF_Variance_in_effort__c</fullName>
        <label>TNF Variance in Effort*</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pkl_CNF_PIR_Status__c</fullName>
        <label>CNF PIR Status</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_TNF_Currency__c</fullName>
        <label>TNF Currency*</label>
        <picklist>
            <picklistValues>
                <fullName>EURO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_TNF_Terminated_by__c</fullName>
        <label>TNF Terminated By*</label>
        <picklist>
            <picklistValues>
                <fullName>Unilever</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accenture</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>txt_CNF_Accenture_Project_Manager__c</fullName>
        <label>CNF Accenture Project Manager*</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_CNF_CR_number__c</fullName>
        <label>CNF CR Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_CNF_Unilever_Budget_Approver_Name__c</fullName>
        <label>CNF Unilever Budget Approver Name*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_CNF_Unilever_Clarity_ID__c</fullName>
        <label>CNF Unilever Clarity ID*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_CNF_Unilever_Content_Approver_Name__c</fullName>
        <label>CNF Unilever Content Approver Name*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_TNF_Actual_effort_in_days__c</fullName>
        <label>TNF Actual Effort in Days*</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>txt_TNF_Approved_by__c</fullName>
        <label>TNF Approved By*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txt_TNF_Comments__c</fullName>
        <label>TNF Comments*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txt_TNF_Other_Currency__c</fullName>
        <label>TNF Other Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_TNF_Reason_for_termination__c</fullName>
        <label>TNF Reason for Termination*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txt_TNF_Relocation_of_resources__c</fullName>
        <label>TNF Relocation of Resources*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txt_TNF_TD_Notice_Required__c</fullName>
        <label>TNF Notice Required*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txt_TNF_Unilever_Clarity_ID__c</fullName>
        <label>TNF Unilever Clarity ID*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txt_TNF_Unilever_Contact_Name__c</fullName>
        <label>TNF Unilever Contact Name*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txta_CNF_Reason_for_Return__c</fullName>
        <label>CNF Reason for Return</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_TNF_Reason_for_Cancellation__c</fullName>
        <label>TNF Reason for Cancellation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_TNF_Reason_for_Return__c</fullName>
        <label>TNF Reason for Return</label>
        <type>TextArea</type>
    </fields>
    <label>CNF/TNF</label>
    <nameField>
        <label>CNF/TNF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CNF/TNFs</pluralLabel>
    <recordTypes>
        <fullName>CNF</fullName>
        <active>true</active>
        <label>CNF</label>
    </recordTypes>
    <recordTypes>
        <fullName>TNF</fullName>
        <active>true</active>
        <label>TNF</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>